# abstractcp

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-publish.yml  test.yml
abstractcp/: __init__.py
tests/: mypytests.py  requirements.txt  test_define.py  test_use.py
