[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abstractcp"
version = "1.0.0"
description = "Create abstract class variables"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Claude El", email = "abstractcp@claude.nl" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/reinhrst/abstractcp"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.1",
    "mypy>=1.10",
    "tox>=4",
]
test = [
    "pytest>=8.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["abstractcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/abstractcp",
    "/tests",
    "/README.md",
    "/LICENSE",
]
